cargo-features = ["strip"]

[package]
name = "getman_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"

[package.metadata.bundle]
identifier = "com.desdeen.getman_egui"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"